hphp/hack/test/enum_atom/typing/atom_missing_attribute.php.exp
File "atom_missing_attribute.php", line 15, characters 5-6:
Atoms are not allowed in this position. They are only allowed in function call, if the function parameter is annotated with __Atom (Typing[4396])
